DOCS-2398 - Fix simpletables and overflowing regular tables

--- a/server/public/stylesheets/html5template.css
+++ b/server/public/stylesheets/html5template.css
@@ -76,20 +76,6 @@ main > article {
   margin-right: 3rem;
 }
 
-main > article table {
-  display: block;
-  overflow: auto;
-  background-image: linear-gradient(to right, white, white),
-    linear-gradient(to right, white, white),
-    linear-gradient(to right, rgba(0, 0, 0, 0.25), rgba(255, 255, 255, 0)),
-    linear-gradient(to left, rgba(0, 0, 0, 0.25), rgba(255, 255, 255, 0));
-  background-position: left center, right center, left center, right center;
-  background-repeat: no-repeat;
-  background-color: white;
-  background-size: 40px 100%, 40px 100%, 30px 100%, 30px 100%;
-  background-attachment: local, local, scroll, scroll;
-}
-
 main > .spacer {
   border-right: 1px solid lightgray;
 }
